<resources>
    <string name="app_name">Dropo Store</string>
    <string name="text_login">Sign In</string>
    <string name="text_log_out">Logout</string>
    <string name="text_document">Documents</string>
    <string name="text_register">Sign Up</string>
    <string name="text_add_item_specification">Add Item Specification</string>
    <string name="text_items">Item</string>
    <string name="text_save">Save</string>
    <string name="text_accept">Accept</string>
    <string name="text_reject">Reject</string>
    <string name="text_order">Orders</string>
    <string name="text_preparing_order">Start preparing order</string>
    <string name="text_order_ready">Order Ready</string>
    <string name="text_assign_provider">Assign Order To Deliveryman</string>
    <string name="text_reassign">Reassign</string>
    <string name="text_are_you_sure">Are you sure?</string>
    <string name="msg_cancel_request">Are you sure you want to cancel request?</string>
    <string name="text_image">Image</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_no_internet">Your Internet seems to be disabled, enable internet to explore more.</string>
    <string name="text_exit">Exit</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_email_or_phone">Email Or Phone</string>
    <string name="text_sms_otp">Phone OTP</string>
    <string name="text_email_otp">Email OTP</string>
    <string name="text_password">Password</string>
    <string name="text_password_retype">Confirm Password</string>
    <string name="text_change_password">Change Password?</string>
    <string name="text_address">Address</string>
    <string name="text_mobile_no">Mobile No.</string>
    <string name="text_username">Username</string>
    <string name="text_slogan">Slogan</string>
    <string name="text_famous_for">Famous For</string>
    <string name="text_website">Your website</string>
    <string name="text_lat">Latitude</string>
    <string name="text_lng">Longitude</string>
    <string name="text_select_country">Select Country</string>
    <string name="text_select_city">City</string>
    <string name="text_select_category">Select store type</string>
    <string name="text_choosePicture">Choose Photo</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_forgot_psw_title">To reset your password, enter the user credentials used for registration. We will send you the code on registered credentials.</string>
    <string name="text_product_title">Product Title</string>
    <string name="text_description">Description</string>
    <string name="text_make_visible">Make Visible/Not?</string>
    <string name="text_specification">Specifications</string>
    <string name="text_no_specification">No Specifications</string>
    <string name="text_visible">Visible</string>
    <string name="text_invisible">Invisible</string>
    <string name="text_add_new_store_time">Store Opening Time</string>
    <string name="text_push_notification">Push Notification</string>
    <string name="text_orders">Orders</string>
    <string name="text_deliveries">Deliveries</string>
    <string name="text_products">Products</string>
    <string name="text_subcategories">SubCategories</string>
    <string name="text_item">Item</string>
    <string name="text_profile">Profile</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_new_password">New Password</string>
    <string name="text_new_confirm_password">Confirm Password</string>
    <string name="text_price">Price</string>
    <string name="text_in_stock">In Stock/Not?</string>
    <string name="text_item_specification_name">Item Specification Name</string>
    <string name="text_add_specification">Add Specification</string>
    <string name="text_default">Default</string>
    <string name="text_required">Is required or not?</string>
    <string name="text_verify_account">Verify Account</string>
    <string name="text_verify_details">Verify Details</string>
    <string name="text_verify_account_msg">Please enter your current password to verify your account</string>
    <string name="text_is_business">Your Business</string>
    <string name="text_tax_on_order_bill">Tax on order bill (%)</string>
    <string name="text_free_delivery_for_above_price">Free delivery for above order price</string>
    <string name="text_app_version">App Version</string>
    <string name="text_settings">Settings</string>
    <string name="text_payments">Payments</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_total_order_price">Total Order Price</string>
    <string name="text_order_no">Order No. #</string>
    <string name="text_qty">Quantity</string>
    <string name="text_pay">Pay</string>
    <string name="text_view_more"><u>View More</u></string>
    <string name="text_select_any_product">Select Product</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="msg_wait_for_orde_confirmation">Waiting for confirmation.</string>
    <string name="text_status0">Waiting for store to accept the order.</string>
    <string name="text_status1">Waiting for accept</string>
    <string name="text_status3">Accepted</string>
    <string name="text_status5">Preparing order</string>
    <string name="text_status7">Order ready</string>
    <string name="text_status9">Waiting for deliveryman</string>
    <string name="text_status109">Delivery Man Not Found.</string>
    <string name="text_status11">Delivery man has accepted the order</string>
    <string name="text_status111">Delivery man has rejected the order.</string>
    <string name="text_status112">Delivery man canceled the request.</string>
    <string name="text_status13">Delivery man is coming to pick up the order.</string>
    <string name="text_status15">Delivery man has arrived</string>
    <string name="text_status17">Delivery man has picked up the order.</string>
    <string name="text_status19">Delivery man has started the delivery.</string>
    <string name="text_status21">Delivery man has arrived at the destination.</string>
    <string name="text_status23">Delivery man has completed delivery.</string>
    <string name="text_status101">Order has been canceled by the user.</string>
    <string name="text_status103">You rejected order.</string>
    <string name="text_status104">You cancelled order.</string>
    <string name="text_status105">You cancelled request.</string>
    <string name="text_admin_alert">Admin Alert!</string>
    <string name="text_alert">Alert</string>
    <string name="text_under_review">You will receive confirmation email\nonce admin approve you.</string>
    <string name="text_google_mail_app_not_installed">Google mail app is not installed.</string>
    <string name="text_verify_email_sms">Please enter the OTP you have received.</string>
    <string name="text_verify_email">Please enter the OTP you have received.</string>
    <string name="text_verify_sms">Please enter the OTP you have received.</string>
    <string name="text_confirm_details">Confirm Details</string>
    <string name="text_please_confirm_details">We sent you the verification code as per the following email/phone number.</string>
    <string name="text_new_order_request">This is a new order request !</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_total">Total</string>
    <string name="text_history">History</string>
    <string name="text_delivery_details">Delivery Details</string>
    <string name="text_time_h_m">Time(h:m)</string>
    <string name="text_distance">Distance</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_from">Select From Date</string>
    <string name="text_to">Select To Date</string>
    <string name="text_label_to">To</string>
    <string name="text_reset">Reset</string>
    <string name="text_apply">Apply</string>
    <string name="text_select_from_date">Select From Date</string>
    <string name="text_select_to_date">Select To Date</string>
    <string name="text_store_time">Store Timings</string>
    <string name="text_promo">Promo</string>
    <string name="text_item_name">Item Name</string>
    <string name="text_account">Account</string>
    <string name="text_specification_group">Specification Groups</string>
    <string name="text_item_in_stock">In Stock</string>
    <string name="text_item_out_stock">Out of\nStock</string>
    <string name="text_or">or</string>
    <string name="text_digits">Digits.</string>
    <string name="text_submit">Submit</string>
    <string name="text_mandatory_document">* - indicates mandatory fields</string>
    <string name="text_id_number">ID Number :</string>
    <string name="text_expire_date">Exp.Date :</string>
    <string name="text_set_document_photos">Set document photos</string>
    <string name="text_document_id">Document ID</string>
    <string name="text_document_expire_date">Document Expiry Date</string>
    <string name="text_select">SELECT</string>
    <string name="text_price_hint">0</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_number">Number</string>
    <string name="text_internet">Internet</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_distance_price">Distance Price</string>
    <string name="text_time_cost">Time Price</string>
    <string name="text_tex">Tax</string>
    <string name="text_surge_price">Surge Price</string>
    <string name="text_total_service_cost">Total Service Price</string>
    <string name="text_item_price_2">Item Price</string>
    <string name="text_specification_price">Specification Price</string>
    <string name="text_total_item_cost">Total Item Price</string>
    <string name="text_card">Card</string>
    <string name="text_cash">Cash</string>
    <string name="text_language">Language</string>
    <string name="text_get_code">Get Code</string>
    <string name="text_pik_up_code">Pickup Code :</string>
    <string name="text_cancel_request">Cancel Request</string>
    <string name="text_not_valid_Time">Not valid Time</string>
    <string name="text_other">Other</string>
    <string name="text_payment_by">Pay By</string>
    <string name="text_service_fees">Service Fees</string>
    <string name="text_order_fees">Order Fees</string>
    <string name="text_paid_order">Paid Order</string>
    <string name="text_paid_share">Paid Delivery</string>
    <string name="text_profit">Profit</string>
    <string name="text_Earn">Earning</string>
    <string name="text_select_vehicle">Select vehicle</string>
    <string name="text_transition_image" translatable="false">Transition Image</string>
    <string name="text_transition_text1" translatable="false">Transition Text1</string>
    <string name="text_transition_text2" translatable="false">Transition Text2</string>
    <string name="text_sequence_number">Sequence Number</string>
    <string name="text_how_would_you_like_to_assign_delviery_man">How would you like to assign \n deliveryman?</string>
    <string name="text_assign_automaticly">Assign Automatically</string>
    <string name="text_assign_manual">Assign Manual</string>
    <string name="text_assign">Assign</string>
    <string name="text_select_server" translatable="false">Select Server</string>
    <string name="text_live" translatable="false">Live</string>
    <string name="text_staging" translatable="false">Staging</string>
    <string name="text_developer" translatable="false">Developer</string>
    <string name="msg_please_enter_url" translatable="false">Please enter URL</string>
</resources>