<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llOrderPayment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?appThemeTagStyle"
    android:gravity="center"
    android:orientation="horizontal">

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_order"

        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_payment_by"
        android:textSize="10sp"


        android:visibility="gone"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"

        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_total"

        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />


    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_order_fees"


        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_profit"


        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_paid_share"

        android:textSize="10sp"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_paid_order"


        android:textSize="10sp"

        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

    <com.dropo.store.widgets.CustomTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:text="@string/text_Earn"


        android:textSize="10sp"
        app:typefaceTv="fonts/AvenirLTStd-Medium.otf" />

</LinearLayout>