<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?appThemeScreenBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        app:cardBackgroundColor="?appThemeModeColor"
        app:cardCornerRadius="@dimen/app_card_radius"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/ivProductLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_image"
            android:contentDescription="@string/text_image"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:transitionName="@string/text_transition_image" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/activity_horizontal_padding"
            app:cardBackgroundColor="?appThemeModeColor"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <com.dropo.store.widgets.CustomImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/ic_camera">

            </com.dropo.store.widgets.CustomImageView>
        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutProName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/text_product_title"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:theme="?appThemeTextInputLayoutStyle">

        <com.dropo.store.widgets.CustomInputEditText
            android:id="@+id/etProName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="textCapSentences"
            android:textAlignment="viewStart"
            android:transitionName="@string/text_transition_text1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:theme="?appThemeTextInputLayoutStyle"
        android:hint="@string/text_description"
        android:visibility="gone">

        <com.dropo.store.widgets.CustomInputEditText
            android:id="@+id/etProDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:textAlignment="viewStart"
            android:transitionName="@string/text_transition_text2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sequence_number"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:theme="?appThemeTextInputLayoutStyle">

        <com.dropo.store.widgets.CustomInputEditText
            android:id="@+id/etProSequenceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:transitionName="@string/text_transition_text1" />
    </com.google.android.material.textfield.TextInputLayout>


    <include
        layout="@layout/include_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

    </include>

</LinearLayout>