<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/bottom_sheet_dialog_padding_20dp"
    android:paddingTop="@dimen/bottom_sheet_dialog_padding_30dp"
    android:paddingEnd="@dimen/bottom_sheet_dialog_padding_20dp"
    android:paddingBottom="@dimen/bottom_sheet_dialog_padding_30dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.dropo.store.widgets.CustomFontTextViewTitle
            style="?appThemeTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_vehicle"
            android:textAlignment="viewStart"
            android:textSize="@dimen/size_app_text_large" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvVehicle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>


        <com.dropo.store.widgets.CustomFontTextViewTitle
            android:id="@+id/tvDriverAssign"
            style="?appThemeTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_app_edit_text_padding"
            android:text="@string/text_how_would_you_like_to_assign_delviery_man"
            android:textAlignment="viewStart"
            android:textSize="@dimen/size_app_text_large" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_padding">

            <com.dropo.store.widgets.CustomRadioButton
                android:id="@+id/rbAutomaticAssign"
                style="?appThemeRadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_assign_automaticly" />

            <com.dropo.store.widgets.CustomRadioButton
                android:id="@+id/rbManualAssign"
                style="?appThemeRadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_assign_manual" />

        </RadioGroup>

        <com.dropo.store.widgets.CustomButton
            android:id="@+id/btnPositive"
            style="?appThemeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_assign"
            app:typefaceBtn="fonts/AvenirLTStd-Medium.otf" />
    </LinearLayout>

    <com.dropo.store.widgets.CustomImageView
        android:id="@+id/btnNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingStart="@dimen/dimen_app_edit_text_padding"
        android:paddingTop="@dimen/dimen_app_edit_text_padding"
        android:paddingBottom="@dimen/dimen_app_edit_text_padding"
        android:src="@drawable/ic_cross" />
</FrameLayout>